--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,19 +13,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup Node
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        node-version: '14'
     - run: npm run build
     - name: Deploy
       uses: peaceiris/actions-gh-pages@main
